--- a/About.css
+++ b/About.css
@@ -14,3 +14,42 @@
 .one a {
     text-decoration: none;
 }
+
+
+.five {
+    background-color: rgb(151, 0, 3);
+    padding: 30px;
+}
+.five h3 {
+    color: white;
+}
+.five p {
+    color: white;
+}
+
+
+.two {
+    background-image: url(working.jpeg);
+    height: 80vh;
+    border: 2px solid black;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.two h2 {
+    font-size: 50px;
+    color: rgb(151, 0, 3); 
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 10px; 
+    width: fit-content;
+    background-color: white;
+}
+.two p {
+    color: rgb(151, 0, 3);
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 40px 0px 40px 0px; 
+    width: 70%;
+    background-color: white;
+    
+}
